erDiagram
    CLIENTES ||--o{ EQUIPOS : "tiene"
    CLIENTES ||--o{ PARTES : "solicita"
    EQUIPOS ||--o{ PARTES : "asociado_a"
    EMPLEADOS ||--o{ PARTES : "atiende"
    EMPLEADOS ||--o{ TAREAS : "realiza"
    PARTES ||--o{ TAREAS : "contiene"
    PARTES ||--o{ REPARACION_PARTE : "incluye"
    TAREAS ||--o{ REPARACION_PARTE : "utiliza"
    PIEZAS ||--o{ REPARACION_PARTE : "usada_en"

    CLIENTES {
        string telefono PK
        string nombre
        string apellido
        string usuario
        string contrasena
        int privilegio
        boolean Whatsap
        boolean Llamar
    }
    
    EMPLEADOS {
        string DNI PK
        string nombre
        string apellido
    }
    
    EQUIPOS {
        int id_equipo PK
        string marca
        string modelo
        string SO
        string cliente_telefono FK
    }
    
    MENSAJES {
        int id PK
        string Nombre
        string Apellidos
        string Correo
        text Mensaje
    }
    
    PARTES {
        int numero_parte PK
        date fecha
        text notas
        string cliente_telefono FK
        int id_equipo FK
        string empleado_dni FK
    }
    
    PIEZAS {
        string codigo_pieza PK
        string nombre
        string marca
        string modelo
    }
    
    REPARACION_PARTE {
        int parte PK,FK
        int tarea PK,FK
        string pieza PK,FK
    }
    
    TAREAS {
        int numero_parte PK,FK
        int id_tarea PK
        text descripcion
        string estado
        int tiempo
        string imagen
        string empleado_dni FK
    }